--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img class="cabecalho-imagem" src="assets/img/art logo.jpg" alt="logo da comunidade Ballerini">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="https://discord.gg/wagxzStdcR" target="_blank">Comunidade Ballerini</a>
-            <a class="cabecalho-menu-item" href="#">Comandos</a>
+            <a class="cabecalho-menu-item" href="https://github.com/Arthurdso" target="_blank">Meu Github</a>
             <a class="cabecalho-menu-item" href="https://github.com/CCodeCommunity/Codify" target="_blank">Open Source</a>
             <a class="cabecalho-menu-item" href="#">Projeto Rafa</a>
         </nav>
@@ -30,7 +30,7 @@
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-titulo">Art Bot</h1>
                 <h2 class="conteudo-principal-escrito-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
-                <button class="conteudo-principal-escrito-botao">Me adicione!</button>
+                <a href="https://www.linkedin.com/in/arthurdso/" target="_blank"><button class="conteudo-principal-escrito-botao">Me adicione!</button></a> 
             </div>
             <img class="conteudo-principal-imagem" src="assets/img/meubot.svg" alt="Imagem da Balle Bot">
         </section>
