--- a/projetoRafa/index.html
+++ b/projetoRafa/index.html
@@ -5,38 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Um bot que vai deixar sua comunidade segura de um jeito fácil">
-    <title>Art Bot - Modere sua comunidade do Discord</title>
+    <title>Balle Bot - Modere sua comunidade do Discord</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="assets/img/art logo.jpg" alt="logo da comunidade Ballerini">
+        <img class="cabecalho-imagem" src="assets/img/logo.svg" alt="logo da comunidade Ballerini">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="https://discord.gg/wagxzStdcR" target="_blank">Comunidade Ballerini</a>
-            <a class="cabecalho-menu-item" href="https://github.com/Arthurdso" target="_blank">Meu Github</a>
+            <a class="cabecalho-menu-item" href="https://github.com/rafaballerini/BalleDocs" target="_blank">Tutorial</a>
             <a class="cabecalho-menu-item" href="https://github.com/CCodeCommunity/Codify" target="_blank">Open Source</a>
-            <a class="cabecalho-menu-item" href="projetoRafa/index.html">Projeto Rafa</a>
+            <a class="cabecalho-menu-item" href="https://arthurdso.github.io/Landing-Page-Art-Bot/">Projeto Arthur</a>
         </nav>
     </header>
 
     <main class="conteudo">
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
-                <h1 class="conteudo-principal-escrito-titulo">Art Bot</h1>
+                <h1 class="conteudo-principal-escrito-titulo">Balle Bot</h1>
                 <h2 class="conteudo-principal-escrito-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
-                <a href="https://www.linkedin.com/in/arthurdso/" target="_blank"><button class="conteudo-principal-escrito-botao">Me adicione!</button></a> 
+                <a href="https://github.com/rafaballerini" target="_blank"><button class="conteudo-principal-escrito-botao">Me adicione!</button></a>
             </div>
-            <img class="conteudo-principal-imagem" src="assets/img/meubot.svg" alt="Imagem da Balle Bot">
+            <img class="conteudo-principal-imagem" src="assets/img/ballebot.svg" alt="Imagem da Balle Bot">
         </section>
 
         <section class="conteudo-secundario">
-            <h3 class="conteudo-secundario-titulo">O que ele faz por você?</h3>
+            <h3 class="conteudo-secundario-titulo">O que ela faz por você?</h3>
             <p class="conteudo-secundario-paragrafo">1. Cria um <strong>sistema de verificação capcha</strong> para novos membros garantirem que não são robôs</p>
             <p class="conteudo-secundario-paragrafo">2. Possui um <strong>sistema de banimento automático</strong> para links suspeitos que forem enviados na comunidade</p>
             <p class="conteudo-secundario-paragrafo">3. <strong>Sistema de avisos e banimento manual</strong>, para pessoas administradoras utilizarem</p>
@@ -44,12 +41,7 @@
     </main>
 
     <footer class="rodape">
-        <p class="letras A">A</p>
-        <p class="letras R">R</p>
-        <p class="letras T">T</p>
-        <p class="letras H">H</p>
-        <p class="letras U">U</p>
-        <p class="letras R">R</p>
+        <img class="rodape-imagem" src="assets/img/ballerini.svg" alt="">
     </footer>
 </body>
 </html>
